Resolved alignment issues on card model in menuComponent

--- a/Pizza-Man/src/app/component/home/home.component.css
+++ b/Pizza-Man/src/app/component/home/home.component.css
@@ -3,7 +3,7 @@
     background-position: 50%;
     background-size: cover;
     background-attachment: fixed;
-    background-image: linear-gradient(rgba(44, 41, 41, 0.7), rgba(51, 47, 47, 0.7)), url(../../assets/static/images/PizzaBackground.jpg);
+    background-image: linear-gradient(rgba(44, 41, 41, 0.7), rgba(51, 47, 47, 0.7)), url(../../../assets/static/images/PizzaBackground.jpg);
 }
 #home-logo{
     height: 10.5rem;
