--- a/Pizza-Man/src/app/component/menu/menu.component.css
+++ b/Pizza-Man/src/app/component/menu/menu.component.css
@@ -264,6 +264,9 @@ bottom: -3px;
     margin: 8px 20px 20px 10px;
     transition: .6s;
 }
+#card-model-content{
+	height: 190px;
+}
 #card-model:hover{
     /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; */
 
